--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,14 @@
 .font-size {
     font-size: 38px;
 }
+#grid-container {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 50% 50% 30%;
+}
+.create {
+    grid-column: 1/3;
+}
+#generator {
+    grid-column: 3/5;
+}
