--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,33 +13,49 @@
   -webkit-filter: blur(8px);
 }
 .color-change {
-    background-color: rgb(252, 163, 17) !important;
+    background-color: #f5d020;
+    background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%) !important;
     padding: 15px;
 
 }
 .font-size {
     font-size: 38px;
+    text-shadow: 0 0 3px #ffc400da, 0 0 5px #0000FF;
+
 }
 
 
-section {
+/* section {
     width: 300px;
   border: 5px solid rgb(252, 163, 17);
   background-color: rgb(20, 33, 61);
   padding: 50px;
   margin: 20px;
   color: rgb(229, 229, 229);
-}
+} */
 
 #grid-container {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 50% 50% 30%;
+    grid-template-rows: 50% 60%;
 }
 .create {
     grid-column: 1/3;
+    margin: 100px;
+    position: relative;
+    left: 200px;
+    top: 20px;
 }
 #generator {
-    grid-column: 3/5;
+    grid-column: 2/5;
+    position: relative;
+    top: 50px;
+    left: 150px;
 }
 
+#random {
+    margin: 50px;
+    position: relative;
+    left: 50px;
+    top: 10px;
+}
