--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,7 @@
 }
 .font-size {
     font-size: 38px;
-    text-shadow: 0 0 3px #ffc400da, 0 0 5px #0000FF;
-
+    text-shadow: 0 0 3px #0084ffda, 0 0 5px #09ff00;
 }
 
 
@@ -37,7 +36,7 @@
 #grid-container {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 50% 60%;
+    grid-template-rows: 50% 50%;
 }
 .create {
     grid-column: 1/3;
@@ -45,17 +44,48 @@
     position: relative;
     left: 200px;
     top: 20px;
+    text-shadow: 0 0 3px #e43636da, 0 0 5px #ff5e00;
 }
 #generator {
+    display: grid;
     grid-column: 2/5;
     position: relative;
-    top: 50px;
+    top: 10px;
     left: 150px;
+    width: 500px;
+    height: 350px;
 }
 
 #random {
+    display: grid;
     margin: 50px;
     position: relative;
     left: 50px;
-    top: 10px;
+    bottom: 25px;
+    width: 500px;
+    height: 350px;
+}
+.meme {
+    display: grid;
+    grid-column: 1;
+    padding-left: 300px;
+    padding-top: 100px;
+    text-shadow: 0 0 3px #e43636da, 0 0 5px #ff5e00;
+}
+.button {
+    background-image: linear-gradient(315deg, #f5d020 0%, #f53803 74%);
+}
+.button:hover {
+    background-image: linear-gradient(315deg, #f5d22081 0%, #f537038e 74%);
+}
+#random-btn {
+    background-image: linear-gradient(315deg, #0051ff 0%, #00f30c 74%);
+    margin-left: 20px;
+    padding: 10px;
+}
+#random-btn:hover {
+    background-image: linear-gradient(315deg, #0084ffbb 0%, #1cf30086 74%);
+}
+.texts {
+    background-image: linear-gradient(315deg, #f8aa00 0%, #ffffff 74%);
 }
