--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@
     filter: blur(8px);
   -webkit-filter: blur(8px);
 }
+
+#project-title {
+    font-family: 'Bangers', cursive;
+}
 .color-change {
     background-color: rgb(252, 163, 17) !important;
     padding: 15px;
@@ -23,7 +27,7 @@
 
 
 section {
-    width: 300px;
+  width: 700px;
   border: 5px solid rgb(252, 163, 17);
   background-color: rgb(20, 33, 61);
   padding: 50px;
@@ -33,13 +37,28 @@ section {
 
 #grid-container {
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 25% 25% 25% 25;
     grid-template-rows: 50% 50% 30%;
 }
 .create {
-    grid-column: 1/3;
+    grid-column: 3;
+    width: 275px;
+    
 }
+
+h2 {
+    font-size: 20px;
+}
+
+h3 {
+    font-size: 20px;
+}
+
 #generator {
     grid-column: 3/5;
 }
 
+#background {
+    grid-column: 5/6;
+    
+}
