--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,9 +23,8 @@
     text-shadow: 0 0 3px #0084ffda, 0 0 5px #09ff00;
 }
 
-
 /* section {
-    width: 300px;
+  width: 300px;
   border: 5px solid rgb(252, 163, 17);
   background-color: rgb(20, 33, 61);
   padding: 50px;
@@ -88,4 +87,13 @@
 }
 .texts {
     background-image: linear-gradient(315deg, #f8aa00 0%, #ffffff 74%);
+}
+
+.card {
+    width: 25em;
+}
+
+#random-photo {
+    max-width: 100%;
+    max-height: 100%;
 }
