--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,39 +26,41 @@
 }
 
 
-section {
-  width: 700px;
-  border: 5px solid rgb(252, 163, 17);
-  background-color: rgb(20, 33, 61);
-  padding: 50px;
-  margin: 20px;
-  color: rgb(229, 229, 229);
-}
-
-#grid-container {
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25;
-    grid-template-rows: 50% 50% 30%;
-}
 .create {
-    grid-column: 3;
-    width: 275px;
-    
+    grid-column: 2;
+    margin-right: 100px;
+    margin-top: 150px;
+    text-shadow: 0 0 3px #e43636da, 0 0 5px #ff5e00;    
 }
-
-h2 {
-    font-size: 20px;
-}
-
-h3 {
-    font-size: 20px;
-}
-
 #generator {
-    grid-column: 3/5;
+    display: grid;
+    grid-column-start: 3;
+    grid-row-start: 2;
+    width: 500px;
+    height: 350px;
+    margin-left: 80px;
+    margin-top: 40px;
+}
+#random {
+    display: grid;
+    margin-left: 80px;
+    margin-top: 34px;
+    grid-column-start: 3;
+    grid-row-start: 1;
+    width: 500px;
+    height: 350px;
+}    
+.meme {
+    grid-column-start: 2;
+    grid-row-start: 2;
+    margin-top: 120px;
+    text-shadow: 0 0 3px #e43636da, 0 0 #ff5e00
+}
+.button {
+    background-image: linear-gradient();
 }
 
-#background {
-    grid-column: 5/6;
+
+
     
-}
+
