--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,37 +42,35 @@
     grid-template-rows: 50% 50%;
 }
 .create {
-    grid-column: 1/3;
-    margin: 100px;
-    position: relative;
-    left: 200px;
-    top: 20px;
+    grid-column-start: 2;
+    margin-right: 100px;
+   margin-top: 150px;
     text-shadow: 0 0 3px #e43636da, 0 0 5px #ff5e00;
 }
 #generator {
     display: grid;
-    grid-column: 2/5;
-    position: relative;
-    top: 10px;
-    left: 150px;
+    grid-column-start: 3;
+    grid-row-start: 2;
     width: 500px;
     height: 350px;
+    margin-left: 80px;
+    margin-top: 40px
 }
 
 #random {
     display: grid;
-    margin: 50px;
-    position: relative;
-    left: 50px;
-    bottom: 25px;
+    margin-left: 80px;
+    margin-top: 34px;
+    grid-column-start: 3;
+    grid-row-start: 1;
     width: 500px;
     height: 350px;
 }
 .meme {
+    grid-column-start: 2;
+    grid-row-start: 2;
     display: grid;
-    grid-column: 1;
-    padding-left: 300px;
-    padding-top: 100px;
+    margin-top: 120px;
     text-shadow: 0 0 3px #e43636da, 0 0 5px #ff5e00;
 }
 .button {
@@ -85,16 +83,15 @@
     background-image: linear-gradient(315deg, #0051ff 0%, #00f30c 74%);
     margin-left: 20px;
     padding: 10px;
+    position: absolute;
+    bottom: 200px;
+    left: 42%
 }
 #random-btn:hover {
     background-image: linear-gradient(315deg, #0084ffbb 0%, #1cf30086 74%);
 }
 .texts {
     background-image: linear-gradient(315deg, #f8aa00 0%, #ffffff 74%);
-}
-
-.card {
-    width: 25em;
 }
 
 #random-photo {
