--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,93 +27,43 @@
     text-shadow: 0 0 3px #0084ffda, 0 0 5px #09ff00;
 }
 
-<<<<<<< HEAD
-
-.create {
-    grid-column: 2;
-    margin-right: 100px;
-    margin-top: 150px;
-    text-shadow: 0 0 3px #e43636da, 0 0 5px #ff5e00;    
-}
-#generator {
-    display: grid;
-    grid-column-start: 3;
-    grid-row-start: 2;
-    width: 500px;
-    height: 350px;
-    margin-left: 80px;
-    margin-top: 40px;
-}
-#random {
-    display: grid;
-    margin-left: 80px;
-    margin-top: 34px;
-    grid-column-start: 3;
-    grid-row-start: 1;
-    width: 500px;
-    height: 350px;
-}    
-.meme {
-    grid-column-start: 2;
-    grid-row-start: 2;
-    margin-top: 120px;
-    text-shadow: 0 0 3px #e43636da, 0 0 #ff5e00
-}
-.button {
-    background-image: linear-gradient();
-}
-
-
-
-    
-
-=======
-/* section {
-  width: 300px;
-  border: 5px solid rgb(252, 163, 17);
-  background-color: rgb(20, 33, 61);
-  padding: 50px;
-  margin: 20px;
-  color: rgb(229, 229, 229);
-} */
-
-#grid-container {
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 50% 50%;
-}
-.create {
-    grid-column: 1/3;
+/* .create {
     margin: 100px;
     position: relative;
-    left: 200px;
     top: 20px;
     text-shadow: 0 0 3px #e43636da, 0 0 5px #ff5e00;
 }
-#generator {
-    display: grid;
-    grid-column: 2/5;
+.generator {
     position: relative;
     top: 10px;
     left: 150px;
     width: 500px;
     height: 350px;
 }
-
 #random {
-    display: grid;
-    margin: 50px;
     position: relative;
     left: 50px;
     bottom: 25px;
     width: 500px;
     height: 350px;
+} */
+
+.nine-images {
+    height: 10rem;
+    width: 10rem;
 }
+
+.searchable {
+    margin-top: 5rem;
+    margin-left: 5rem;
+}
+
+.randomized {
+    margin-top: 5rem;
+    margin-left: 5rem;
+}
+
 .meme {
-    display: grid;
-    grid-column: 1;
-    padding-left: 300px;
-    padding-top: 100px;
     text-shadow: 0 0 3px #e43636da, 0 0 5px #ff5e00;
 }
 .button {
@@ -124,18 +74,15 @@
 }
 #random-btn {
     background-image: linear-gradient(315deg, #0051ff 0%, #00f30c 74%);
+    margin-top: 5rem;
     margin-left: 20px;
-    padding: 10px;
+    padding: 0.5em;
 }
 #random-btn:hover {
     background-image: linear-gradient(315deg, #0084ffbb 0%, #1cf30086 74%);
 }
 .texts {
     background-image: linear-gradient(315deg, #f8aa00 0%, #ffffff 74%);
-}
-
-.card {
-    width: 25em;
 }
 
 #random-photo {
@@ -147,4 +94,7 @@
     max-width: 200px;
     max-height: 200px;
 }
->>>>>>> 490c401b1aed8c78dbb56018c333244831fa533d
+
+.card {
+    width: 38rem;
+}
