--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,13 +74,13 @@
 .button:hover {
     background-image: linear-gradient(315deg, #f5d22081 0%, #f537038e 74%);
 }
-#random-btn {
+.random-btn {
     background-image: linear-gradient(315deg, #0051ff 0%, #00f30c 74%);
     margin-top: 5rem;
     margin-left: 20px;
     padding: 0.5em;
 }
-#random-btn:hover {
+.random-btn:hover {
     background-image: linear-gradient(315deg, #0084ffbb 0%, #1cf30086 74%);
 }
 .texts {
@@ -129,3 +129,8 @@ text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     position: absolute;
     /* important (all position that's not `static`) */
   }
+
+#myImg {
+    width: 100%;
+    height: 100%;
+}
